# colmi_client

./: .gitignore  Cargo.toml  config.toml
src/: ble.rs  cli.rs  config.rs  device.rs  error.rs  errors.rs  main.rs  protocol.rs  tui.rs
src/ble/: battery.rs
src/bluetooth/: scanner.rs
src/cli/: commands.rs  mod.rs
src/config/: manager.rs
src/devices/: manager.rs  models.rs
src/protocol/: battery.rs  blink.rs  features.rs  find.rs  reboot.rs  reset.rs
src/tui/: app.rs  ui.rs
