[package]
name = "colmi_client"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.11.8"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.2"
